# MachineLearning_Python

./: 1.py  10.py  11.py  12.py  13.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  README.md  SplitCSVIntoSlices_20201201.ipynb  environment.yml  metrics.py
yolo_v7/: detect.py  eval_pose.py  eval_pose_backup.py  pyproject.toml  setup.py  train.py  yolov7_TL_ds_hard_hat.ipynb
yolo_v7/.ipynb_checkpoints/: Train_yolov7_custom_data_2024-08-25-checkpoint.ipynb  yolov7_TL_ds_hard_hat-checkpoint.ipynb  yolov7_TL_ds_hard_hat-checkpoint.py
yolo_v7/_how_to/: yolov7_TL_ds_hard_hat.ipynb
yolo_v7/_trash/: Detect_poses_2024-08-26.ipynb  Train_yolov7_custom_data_2024-08-25.ipynb
yolo_v7/ds_hard_hat/: README.roboflow.txt  data.yaml
yolo_v7/ds_hard_hat/train/: labels.cache
yolo_v7/ds_hard_hat/train/labels/: 000001_jpg.rf.1fade37ff8c6677a6c93f8de0ba74937.txt  000001_jpg.rf.6d8eb0ecd91f9e4a666000b7b3fe65a6.txt  000007_jpg.rf.2ca5063dfcafa1bcf7def780af78970b.txt  000007_jpg.rf.913aba38943ca9cab4eb35157687ac14.txt  000012_jpg.rf.4313bbb3b51c1a1ece2bf924d78e0a14.txt  000012_jpg.rf.5bda1f7ad18c73b61df8cfb58692e8ec.txt  000013_jpg.rf.1de84ef3cf150272674b86925dbf175b.txt  000013_jpg.rf.78fed774e26df3c5c4b243897e24d622.txt  000014_jpg.rf.003bc9eea16f715dc62ebb1333202db6.txt  000014_jpg.rf.56ec800fecc0f0f06d80338bd6e0e79b.txt  000016_jpg.rf.bbd0abe71a6c63d9a436a155a39bddc5.txt  000016_jpg.rf.ea0905a946011da060093137e730a50a.txt  (+128 more)
yolo_v7/ds_hard_hat/valid/: labels.cache
yolo_v7/utils/: general.py  google_utils.py  pose.py
yolo_v7/yolov7.egg-info/: PKG-INFO  SOURCES.txt
(+35 files in other folders)
