[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yolov7"
version = "0.0.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
